@@ -4,7 +4,7 @@
     <layout type="general" orientation="landscape">
         <section id="main" movable="false">
           <row>
-            <key>
+            <key id="q">
               <binding label="q"/>
               <binding shift="true" label="Q"/>
             </key>
